external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_generic_condition_fail.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 277
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_generic_condition_fail.move:2:5
  │
2 │     spec schema InvalidGenericEnsures {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'
